--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3235,7 +3235,8 @@ input, select, textarea {
 			height: 100%;
 			background-color: #212931;
 			background-image: url("../../images/overlay.png"), linear-gradient(0deg, rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.1)), url("../../images/bg.jpg");
-			background-size: auto,								auto,								100% auto;
+      display: block,block,block;
+			background-size: auto,								auto,							cover;
 			background-position: center,					center,				      top center;
 			background-repeat: repeat,				 	no-repeat,						no-repeat;
 			background-attachment: scroll,			scroll,							scroll;
@@ -3399,7 +3400,7 @@ input, select, textarea {
 
 			margin-top: -0.25rem;
 			text-align: center;
-      position:absolute;
+      position:relative;
       top: 19rem;
 		}
 
