--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3235,13 +3235,21 @@ input, select, textarea {
 			height: 100%;
 			background-color: #212931;
 			background-image: url("../../images/overlay.png"), linear-gradient(0deg, rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.1)), url("../../images/bg.jpg");
-      display: block,block,block;
 			background-size: auto,								auto,							cover;
 			background-position: center,					center,				      top center;
 			background-repeat: repeat,				 	no-repeat,						no-repeat;
 			background-attachment: scroll,			scroll,							scroll;
 			z-index: -1;
 		}
+    @media screen and (max-width: 736px) {
+      #wrapper >.bg {
+        background-image: url("../../images/overlay.png"), linear-gradient(0deg, rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.1)), url("../../images/bg_vertical.jpg");
+        background-size: auto,auto,100%auto;
+
+      }
+
+
+    }
 
 			#wrapper > .bg.fixed {
 				position: fixed;
