--- a/assets1/css/main.css
+++ b/assets1/css/main.css
@@ -2318,6 +2318,8 @@ input, select, textarea {
 			margin: 0 0 2em 0;
       max-height: 550px;
       max-width: 800px;
+      max-width: 80%;
+      max-height: 80%;
       margin: auto;
       
     }
