--- a/assets1/css/main.css
+++ b/assets1/css/main.css
@@ -2316,8 +2316,8 @@ input, select, textarea {
 		.image.fit {
 			display: block;
 			margin: 0 0 2em 0;
-      max-width: 45%;
-
+      max-height: 600px;
+      max-width: 700px;
       margin: auto;
       
     }
@@ -2332,8 +2332,22 @@ input, select, textarea {
 		}
 
 			.image.featured img {
-				width: 100%;
+				
+        height: 50vh;
+        width: 100%;
+        object-fit: cover;
+        object-position: center;
+        -moz-transition:all 1.5s ease-out;
+				-webkit-transition: all  1.5s ease-out;
+				-ms-transition: all 1.5s ease-out;
+				transition: all 1.5s ease-out;
 			}
+      .image.featured img:hover {
+        
+
+        height: 90vh;
+      }
+      
 
 			@media screen and (max-width: 736px) {
 
@@ -2804,11 +2818,11 @@ input, select, textarea {
 			overflow: hidden;
 		}
 
-			.post > a.image.featured img {
-				-moz-transition: -moz-transform 0.2s ease-out;
-				-webkit-transition: -webkit-transform 0.2s ease-out;
-				-ms-transition: -ms-transform 0.2s ease-out;
-				transition: transform 0.2s ease-out;
+			/* .post > a.image.featured img {
+				-moz-transition: -moz-transform 2s ease-out;
+				-webkit-transition: -webkit-transform 2s ease-out;
+				-ms-transition: -ms-transform 2s ease-out;
+				transition: transform 2s ease-out;
 			}
 
 			.post > a.image.featured:hover img {
@@ -2816,7 +2830,7 @@ input, select, textarea {
 				-webkit-transform: scale(1.05);
 				-ms-transform: scale(1.05);
 				transform: scale(1.05);
-			}
+			} */
 
 		.post > footer {
 			display: -moz-flex;
